--- a/sources/templates/music_box/comp_popup_music_control.html
+++ b/sources/templates/music_box/comp_popup_music_control.html
@@ -1,5 +1,13 @@
 <div class="popup_fixed_container hidden" id="music_control_overlay">
     <div class="music_control_content" id="music_control_content">
+        <div class="music_control_item clickable spin_holder" id="msc_ctrl_add_set_button">
+            <img class="music_control_icon" src="{{ url_for('static', filename='icons/add_collection_theme.png') }}">
+            <div class="music_control_text">添加至合集</div>
+        </div>
+        <div class="music_control_item clickable spin_holder" id="msc_ctrl_del_set_button">
+            <img class="music_control_icon" src="{{ url_for('static', filename='icons/delete.png') }}">
+            <div class="music_control_text">移除出合集</div>
+        </div>
         <div class="music_control_item clickable spin_holder" id="music_edit_button">
             <img class="music_control_icon" src="{{ url_for('static', filename='icons/edit.png') }}">
             <div class="music_control_text">编辑</div>
