--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -31,7 +31,7 @@
                     <div class="music_control_info_icon">
                         <img src="/static/icons/magnifier.png">
                     </div>
-                    <input placeholder="输入文本搜索" class="music_search_input">
+                    <input placeholder="输入文本搜索" class="music_search_input" id="music_search_input">
                 </form>
             </div>
             <div class="music_content_main_panel">
