--- a/sources/templates/common/comp_navigation_bar.html
+++ b/sources/templates/common/comp_navigation_bar.html
@@ -1,6 +1,6 @@
 <div class="navigation_header">
     <div class="navigation_icon clickable" id="main_side_bar_button">
-        <img src="{{ url_for('static', filename='icons/menu.png') }}">
+        <img src="{{ url_for('static', filename='icons/sidebar.png') }}">
     </div>
     <div class="navigation_header_title" id="navigation_header_title"></div>
     <div class="navigation_icon clickable">
