--- a/sources/templates/common/comp_popup_image.html
+++ b/sources/templates/common/comp_popup_image.html
@@ -8,19 +8,19 @@
                 <img class="image_display_icon" src="{{ url_for('static', filename='icons/close.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_set_button">
-                <img class="image_display_icon" src="{{ url_for('static', filename='icons/image_white.png') }}">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/image.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_edit_button">
-                <img class="image_display_icon" src="{{ url_for('static', filename='icons/edit_white.png') }}">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/edit.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_download_button">
-                <img class="image_display_icon" src="{{ url_for('static', filename='icons/download_white.png') }}">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/download.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_last_button">
-                <img class="image_display_icon" src="{{ url_for('static', filename='icons/last_page.png') }}">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/last_page_trans.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_next_button">
-                <img class="image_display_icon" src="{{ url_for('static', filename='icons/next_page.png') }}">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/next_page_trans.png') }}">
             </div>
         </div>
     </div>
