--- a/sources/templates/common/comp_popup_video.html
+++ b/sources/templates/common/comp_popup_video.html
@@ -4,25 +4,25 @@
         </video>
         <div class="video_display_bar">
             <div class="video_display_icon_div" id="video_download_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/download_white.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/download.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_rewind_10_min_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_rewind_plus.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_rewind_trans.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_rewind_1_min_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_rewind.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_rewind_trans.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_rewind_10_sec_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/last_page.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/last_page_trans.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_forward_10_sec_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/next_page.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/next_page_trans.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_forward_1_min_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_forward.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_forward_trans.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_forward_10_min_button">
-                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_forward_plus.png') }}">
+                <img class="video_display_icon" src="{{ url_for('static', filename='icons/fast_forward_trans.png') }}">
             </div>
             <div class="video_display_icon_div" id="video_close_button">
                 <img class="video_display_icon" src="{{ url_for('static', filename='icons/close.png') }}">
