--- a/sources/templates/common/comp_side_bar.html
+++ b/sources/templates/common/comp_side_bar.html
@@ -7,13 +7,13 @@
             <dl class="side_bar_row">
                 <div class="side_bar_item clickable" id="side_bar_file_sys">
                     <div class="side_bar_icon">
-                        <img src="{{url_for('static',filename='icons/open_folder_gray.png')}}">
+                        <img src="{{url_for('static',filename='icons/all_file.png')}}">
                     </div>
                     <a class="side_bar_text">文件仓库</a>
                 </div>
                 <div class="side_bar_item clickable" id="side_bar_music_box">
                     <div class="side_bar_icon">
-                        <img src="{{url_for('static',filename='icons/music_gray.png')}}">
+                        <img src="{{url_for('static',filename='icons/music.png')}}">
                     </div>
                     <a class="side_bar_text">音乐盒</a>
                 </div>
