--- a/sources/templates/file_system/comp_popup_file_add.html
+++ b/sources/templates/file_system/comp_popup_file_add.html
@@ -2,7 +2,7 @@
     <div class="form_popup_content" id="file_add_content">
         <div class="form_popup_header">
             <a class="form_popup_header_text" id="file_add_header_text">新增文件</a>
-            <img class="form_icon_button" src="{{ url_for('static', filename='icons/add_folder_blue.png') }}" id="file_add_icon">
+            <img class="form_icon_button" src="{{ url_for('static', filename='icons/add_folder.png') }}" id="file_add_icon">
         </div>
         <form class="form_popup_main" id="file_add_form">
             <label for="file_add_name" class="form_field_label">文件名</label>
