--- a/sources/templates/music_box/page_music_box.html
+++ b/sources/templates/music_box/page_music_box.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="music_control_title">
                     <div class="music_control_info_icon">
-                        <img src="/static/icons/music.png">
+                        <img src="/static/icons/set.png">
                     </div>
                     <div class="music_control_title_text" id="music_control_title_text"></div>
                     <div class="music_control_info_icon" id="edit_music_set_button">
