--- a/sources/static/css/common/comp_navigation_bar.css
+++ b/sources/static/css/common/comp_navigation_bar.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid var(--text-remark-color);
+    border: 2px solid transparent;
     transition: background-color 1s ease, border-color 1s ease;
 }
 .navigation_icon:hover{
@@ -36,8 +36,8 @@
     border-color: var(--theme-part-color);
 }
 .navigation_icon>img{
-    height: 100%;
-    width: 100%;
+    height: 28px;
+    width: 28px;
 }
 .navigation_icon>img:hover{
     mix-blend-mode: multiply;
