--- a/sources/static/css/common/comp_popup_video.css
+++ b/sources/static/css/common/comp_popup_video.css
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--theme-main-color);
+    background: white;
     overflow-x: auto;
     white-space: nowrap;
 }
