--- a/sources/static/css/page/page_file_sys.css
+++ b/sources/static/css/page/page_file_sys.css
@@ -289,7 +289,7 @@
 }
 .file_control_img{
     width: var(--icon-base-size);
-    border: 2px solid var(--text-remark-color);
+    border: 2px solid transparent;
     border-radius: var(--border-min-radius);
     transition: border-color 0.5s ease;
 }
