--- a/sources/static/css/page/page_music_box.css
+++ b/sources/static/css/page/page_music_box.css
@@ -41,15 +41,14 @@
     box-sizing: border-box;
 }
 .music_play_image{
-    width: 48px;
-    height: 48px;
+    width: 32px;
+    height: 32px;
     border: 2px solid transparent;
     background-color: transparent;
     border-radius: var(--border-min-radius);
     transition: border-color 0.5s ease, background-color 0.5s ease;
 }
 .music_play_image:hover{
-    border-color: var(--theme-part-color);
     background-color: var(--theme-active-color);
 }
 .music_play_info{
@@ -204,9 +203,10 @@
 }
 .music_control_img{
     width: var(--icon-base-size);
-    border: 2px solid var(--text-remark-color);
+    border: 2px solid transparent;
     border-radius: var(--border-min-radius);
     transition: border-color 0.5s ease;
+    background-color: var(--theme-background-color);
 }
 .music_control_img:hover{
     border-color: var(--theme-part-color);
@@ -215,7 +215,7 @@
     height: 32px;
     width: 32px;
     border-radius: 13px;
-    border: 2px solid var(--text-remark-color);
+    border: 2px solid transparent;
     margin-left: var(--element-margin);
     margin-right: var(--element-margin);
 }
@@ -317,7 +317,7 @@
 }
 .music_item_control_img{
     width: var(--icon-base-size);
-    border: 2px solid var(--text-remark-color);
+    border: 2px solid transparent;
     border-radius: var(--border-min-radius);
     transition: border-color .5s ease;
 }
