--- a/sources/templates/login/page_login.html
+++ b/sources/templates/login/page_login.html
@@ -6,11 +6,13 @@
         </div>
         <form class="login_form" id="login_form">
             <label for="account" class="login_label">帐号</label>
-            <input type="text" id="account" name="account" required placeholder="请输入帐号" class="login_field_input" autocomplete="username">
+            <input type="text" id="account" name="account" required placeholder="请输入帐号" class="login_field_input"
+                   autocomplete="username">
             <label for="password" class="login_label">密码</label>
-            <input type="password" id="password" name="password" required placeholder="请输入密码" class="login_field_input" autocomplete="current-password">
+            <input type="password" id="password" name="password" required placeholder="请输入密码"
+                   class="login_field_input" autocomplete="current-password">
             <div class="login_button_panel spin_holder" id="login_button_panel">
-                <input type="submit" value="登录" class="login_button clickable" >
+                <button class="login_button clickable">登录</button>
             </div>
         </form>
     </div>
